# pylibgrit

./: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/scripts/: check_release_inventory.py  test_check_release_inventory.py
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-14-pygrit-6wheel-coverage.md  2026-06-15-pylibgrit-write-core-phase-a.md  2026-06-16-pylibgrit-worktree-merge.md  2026-06-17-pylibgrit-ssh-transport.md
docs/superpowers/specs/: 2026-06-13-pygrit-bindings-design.md  2026-06-14-pygrit-6wheel-coverage-design.md  2026-06-14-pygrit-release-readiness-design.md  2026-06-15-grit-lib-write-surface-spike.md  2026-06-16-pylibgrit-worktree-merge-design.md  2026-06-17-pylibgrit-networking-clone-design.md  2026-06-17-pylibgrit-push-design.md
python/pygrit/: __init__.py  __init__.pyi
python/pylibgrit/: __init__.py  __init__.pyi
src/: checkout.rs  config.rs  diff.rs  error.rs  index.rs  lib.rs  merge.rs  net_credentials.rs  net_progress.rs  net_transport.rs  objects.rs  odb.rs  push.rs  refs.rs  remote.rs  repository.rs  revwalk.rs
tests/: conftest.py  githttp.py  test_atomic_cas.py  test_checkout.py  test_clone.py  test_commit_index.py  test_concurrency.py  test_diff.py  test_errors.py  test_fetch.py  test_ffi_lifetime.py  test_http_auth.py  test_http_clone.py  test_index_entry.py  test_index_write.py  test_init.py  test_ls_remote.py  test_merge.py  test_net_errors.py  test_objectid.py  test_objectkind.py  test_objects.py  test_odb.py  test_push_fixture.py  test_push_followups.py  test_push_http.py  test_push_progress.py  test_refs.py  test_revwalk.py  test_smoke.py  test_ssh.py  test_worktree_merge_smoke.py  test_write_concurrency.py  test_write_validation.py
