[package]
name = "pylibgrit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for grit-lib (a Rust reimplementation of Git)"
repository = "https://github.com/linsomniac/pylibgrit"
homepage = "https://github.com/linsomniac/pylibgrit"
documentation = "https://github.com/linsomniac/pylibgrit"
publish = false

[lib]
name = "_pylibgrit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.23.3", features = ["abi3-py311", "extension-module"] }
# AIDEV-NOTE: Strategy A — exact pin of the published grit-lib crate (license MIT).
# Bump only deliberately; keep Cargo.lock committed and build with --locked.
grit-lib = "=0.4.1"
