[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pygrit"
description = "Python bindings for grit-lib (a Rust reimplementation of Git)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control :: Git",
]
dynamic = ["version"]

[tool.maturin]
module-name = "pygrit._pygrit"
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["maturin>=1.7,<2.0", "pytest>=8", "mypy>=1.11", "ruff>=0.6"]
