[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pygrit"
description = "Python bindings for grit-lib (a Rust reimplementation of Git)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control :: Git",
]
dynamic = ["version"]

[tool.maturin]
module-name = "pygrit._pygrit"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"

# AIDEV-NOTE: The native extension `pygrit._pygrit` ships no stub of its own;
# the hand-written python/pygrit/__init__.pyi provides the typed public API.
# This override silences the otherwise-unavoidable missing-stub error.
[[tool.mypy.overrides]]
module = "pygrit._pygrit"
ignore_missing_imports = true

[dependency-groups]
dev = ["maturin>=1.7,<2.0", "pytest>=8", "mypy>=1.11", "ruff>=0.6"]
