[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pylibgrit"
description = "Python bindings for grit-lib (a Rust reimplementation of Git)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control :: Git",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/linsomniac/pylibgrit"
Repository = "https://github.com/linsomniac/pylibgrit"
Issues = "https://github.com/linsomniac/pylibgrit/issues"

[tool.maturin]
module-name = "pylibgrit._pylibgrit"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"

# AIDEV-NOTE: The native extension `pylibgrit._pylibgrit` ships no stub of its own;
# the hand-written python/pylibgrit/__init__.pyi provides the typed public API.
# This override silences the otherwise-unavoidable missing-stub error.
[[tool.mypy.overrides]]
module = "pylibgrit._pylibgrit"
ignore_missing_imports = true

[dependency-groups]
dev = ["maturin>=1.7,<2.0", "pytest>=8", "mypy>=1.11", "ruff>=0.6"]
